--- a/wp-content/themes/evie/assets/less/layouts/pages/_home.less
+++ b/wp-content/themes/evie/assets/less/layouts/pages/_home.less
@@ -150,6 +150,25 @@
 			width:100%;
 			//max-width:1360px;
 		}
+		#main-banner-container{
+			.custom-banner-prev{
+				top:50%;
+				margin-top:-27px;
+			}
+			.custom-banner-next{
+				top:50%;
+				margin-top:-27px;
+			}
+			&:hover{
+				.custom-banner-prev{
+					display:block;	
+				}
+				
+				.custom-banner-next{
+					display:block;
+				}
+			}
+		}
 	}
 	.promotion-banner{
 		.well-feature{
@@ -185,26 +204,6 @@
 			height:211px;
 		}
 	}
-	
-	.home-banner{
-		#main-banner-container{
-			.custom-banner-prev{
-				top:53%;
-			}
-			.custom-banner-next{
-				top:53%;
-			}
-			&:hover{
-				.custom-banner-prev{
-					display:block;	
-				}
-				
-				.custom-banner-next{
-					display:block;
-				}
-			}
-		}
-	}
 }
 
 //===============================================================================
@@ -217,25 +216,6 @@
 	.promotion-banner{
 		.well-feature{
 			height:260px;
-		}
-	}
-	.home-banner{
-		#main-banner-container{
-			.custom-banner-prev{
-				top:40%;
-			}
-			.custom-banner-next{
-				top:40%;
-			}
-			&:hover{
-				.custom-banner-prev{
-					display:block;	
-				}
-				
-				.custom-banner-next{
-					display:block;
-				}
-			}
 		}
 	}
 }
