--- a/wp-content/themes/evie/assets/less/layouts/pages/_home.less
+++ b/wp-content/themes/evie/assets/less/layouts/pages/_home.less
@@ -189,10 +189,12 @@
 	.home-banner{
 		#main-banner-container{
 			.custom-banner-prev{
-				top:53%;
+				top:50%;
+				margin-top: -26px;
 			}
 			.custom-banner-next{
-				top:53%;
+				top:50%;
+				margin-top: -26px;
 			}
 			&:hover{
 				.custom-banner-prev{
