--- a/wp-content/themes/evie/assets/less/layouts/pages/_promotion.less
+++ b/wp-content/themes/evie/assets/less/layouts/pages/_promotion.less
@@ -73,6 +73,7 @@
 			margin-top:0;
 			font-family: "Aileron";
 			font-weight: 600;
+			letter-spacing: 1px;
 		}
 		.promotion_content_container{
 			width:80%;
