--- a/wp-content/themes/evie/assets/less/_global.less
+++ b/wp-content/themes/evie/assets/less/_global.less
@@ -77,6 +77,7 @@ body{
 		float:none;
 		display:table-cell;
 		vertical-align:middle;
+		  padding: 10px 0;
 	}
 	.headline-title-right{
 		height:51px;
@@ -335,6 +336,7 @@ body{
 		font-size: 22px;
 		  padding-top: inherit;
   		padding-bottom: inherit;
+  		padding: 0;
 	}
 }
 
