--- a/wp-content/themes/evie/assets/less/navmenu.less
+++ b/wp-content/themes/evie/assets/less/navmenu.less
@@ -245,6 +245,7 @@
 		  margin-top: 99px;
 		.main-menu{
 			position:relative;
+			margin-top: 1px;
 			.navbar-nav{
 				//margin-top: 110px;
 			}
@@ -299,7 +300,7 @@
 					-webkit-box-shadow: 0px 9px 18px -7px rgba(87,84,87,0.7);
 					-moz-box-shadow: 0px 9px 18px -7px rgba(87,84,87,0.7);
 					box-shadow: 0px 9px 18px -7px rgba(87,84,87,0.7);
-					margin-top: -1px;
+					margin-top: -4px;
 					
 					&:after{
 						font-size: 0px; line-height: 0%; width: 0px;
@@ -358,6 +359,11 @@
 			}
 		}
 	}
+
+	.navbar-nav > li > a {
+	  padding-top: 15px;
+	  padding-bottom: 20px;
+	}
 }
 
 //===============================================================================
@@ -373,7 +379,7 @@
 		}
 	}*/
 	.searchBox-container{
-	    top: 113px;
+	    top: 109px;
 		right: 15px;
 		.search-field{
 			  width: 160px!important;
