--- a/wp-content/themes/evie/assets/less/layouts/pages/_home.less
+++ b/wp-content/themes/evie/assets/less/layouts/pages/_home.less
@@ -45,7 +45,7 @@
 			width:100%;
 		}
 	}
-	#main-banner-container{
+	.main-banner-container{
 		.custom-banner-prev{
 			position:absolute;
 			left:4%;
@@ -68,7 +68,7 @@
 			cursor:pointer;
 			display:none;
 		}
-		/*&:hover{
+		&:hover{
 			.custom-banner-prev{
 				display:block;	
 			}
@@ -76,7 +76,7 @@
 			.custom-banner-next{
 				display:block;
 			}
-		}*/
+		}
 	}
 }
 
