--- a/wp-content/themes/evie/assets/less/_global.less
+++ b/wp-content/themes/evie/assets/less/_global.less
@@ -14,6 +14,10 @@ body{
 	margin-top:30px;
 }
 
+.marginTop10{
+	margin-top:10px;
+}
+
 .main{
 	//padding-top:50px;
 	padding-top:90px;
@@ -138,7 +142,7 @@ body{
 	box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.6);
 	width:520px;
 	//height:220px;
-	padding:40px;
+	padding: 40px 40px 25px;
 	top:30%;
 	left:50%;
 	margin-left:-260px;
@@ -147,14 +151,33 @@ body{
 	h2{
 		text-transform:uppercase;
 		font-family: "Novecento";
+		  letter-spacing: 2px;
+		    margin: 0;
+
 	}
-	input[type=email]{
+	p{
+		  margin: 0;
+		  font-size: 13px;
+		  color: #000;
+	}
+	small{
+		font-size: 11px;
+		color: #848689;
+		 margin-bottom: 10px;
+  		display: block;
+	}
+	input[type=email],input[type=tel]{
 		border: medium none;
 		height: 46px;
 		line-height: 100%;
 		margin-right: 10px;
 		padding: 0 20px;
-		width: 70%;
+		  width: 100%;
+		    margin-bottom: 10px;
+		      font-family: "Novecento";
+  font-weight: 500;
+  color: #aeafb1;
+  font-size: 16px;
 	}
 	input[type=submit]{
 		background: #f6d8d3 none repeat scroll 0 0;
@@ -166,6 +189,7 @@ body{
 		letter-spacing: 2px;
 		line-height: 100%;
 		padding: 0 20px;
+		  width: 100%;
 	}
 	#connect_close{
 		position:absolute;
