--- a/wp-content/themes/evie/assets/less/layouts/pages/_media.less
+++ b/wp-content/themes/evie/assets/less/layouts/pages/_media.less
@@ -18,8 +18,8 @@
 				width:100%;
 			}
 			.media-headline{
-				margin:10px 0;
-				height:65px;
+				margin:10px 0 20px 0;
+				//height:65px;
 				font-size:13px;
 				font-family: "PlayfairDisplay";
 				font-weight: 400;
