--- a/wp-content/themes/evie/assets/less/layouts/pages/_testimonial.less
+++ b/wp-content/themes/evie/assets/less/layouts/pages/_testimonial.less
@@ -9,10 +9,10 @@
 		margin-bottom:20px;
 	}
 	.testimonial-container{
-		margin-top:50px;
+		margin-top:10px;
 		.testimonial-item{
 			font-size:16px;
-			padding:40px 110px;
+			padding:20px 30px;
 			.rating-container{
 				.star{
 					margin-right:5px;
@@ -62,6 +62,15 @@
 @media (min-width: @screen-sm-min) {
 	.stocklist-section .stocklist-container .stocklist-row:last-child .stocklist-item {
 	  padding-bottom: 0;
+	}
+	
+	.testimonial-section{
+		.testimonial-container{
+			margin-top:50px;
+			.testimonial-item{
+				padding:40px 110px;
+			}
+		}
 	}
 }
 
