--- a/wp-content/themes/evie/assets/less/navmenu.less
+++ b/wp-content/themes/evie/assets/less/navmenu.less
@@ -124,6 +124,25 @@
 
 .mobile-menu{
 	background:#F4E8E4;
+	.mobile_function_link{
+		margin:0 -15px;
+		font-family: "Novecento";
+		font-size: 13px;
+		font-weight: 300;
+		letter-spacing: 1px;
+		border-top:1px solid #C4BFBE;
+		a{
+			color:#000;
+			line-height: 20px;
+			padding: 10px 15px;
+			display:block;
+			text-transform:uppercase;
+			&:hover, &:focus{
+				text-decoration:none;
+				font-weight:500;
+			}
+		}
+	}
 	.navbar-nav{
 		margin-top:0;
 		margin-bottom:0;
