--- a/wp-content/themes/evie/assets/less/_global.less
+++ b/wp-content/themes/evie/assets/less/_global.less
@@ -64,8 +64,50 @@ body{
 .headline-title-container{
 	margin-bottom:40px;
 	width:100%;
-	display:table;
-	.headline-title-left{
+	/*display:table;*/
+	
+	.headline-mid{
+		font-size: 15px;
+		text-transform:uppercase;
+		text-align:center;
+		font-family: "Novecento";
+		font-weight: 600;
+		letter-spacing: 4px;
+		/*padding: 10px 0;*/
+		padding:0 20px;
+		background:url(../img/sprites/headline-mid-left.png) repeat-y left, url(../img/sprites/headline-mid-right.png) repeat-y right;
+	}
+	
+	.headline-top{
+		.border-top-left{
+			background:url(../img/sprites/bg_product_other.png) no-repeat left top;
+			height:15px;
+		}
+		.border-top-mid{
+			background:url(../img/sprites/bg_product_other.png) no-repeat center top;
+			height:15px;
+		}
+		.border-top-right{
+			background:url(../img/sprites/bg_product_other.png) no-repeat right top;
+			height:15px;
+		}
+	}
+	.headline-btm{
+		.border-btm-left{
+			background:url(../img/sprites/bg_product_other.png) no-repeat left bottom;
+			height:15px;
+		}
+		.border-btm-mid{
+			background:url(../img/sprites/bg_product_other.png) no-repeat center bottom;
+			height:15px;
+		}
+		.border-btm-right{
+			background:url(../img/sprites/bg_product_other.png) no-repeat right bottom;
+			height:15px;
+		}
+	}	
+	
+	/*.headline-title-left{
 		height:51px;
 		background:url(../img/sprites/bg_bestseller.png) no-repeat left;
 		float:none;
@@ -74,9 +116,6 @@ body{
 	.headline-title-center{
 		height:51px;
 		font-size: 15px;
-  		/*padding: 6px 0 0;
-		font-size:22px;
-		line-height:240%;*/
 		text-transform:uppercase;
 		text-align:center;
 		font-family: "Novecento";
@@ -93,7 +132,7 @@ body{
 		background:url(../img/sprites/bg_bestseller.png) no-repeat right;
 		float:none;
 		display:table-cell;
-	}
+	}*/
 }
 
 .no-hover>a:hover {
@@ -140,12 +179,11 @@ body{
 	-webkit-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.6);
 	-moz-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.6);
 	box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.6);
-	width:520px;
-	//height:220px;
+	width:80%;
 	padding: 40px 40px 25px;
-	top:30%;
+	top:130px;
 	left:50%;
-	margin-left:-260px;
+	margin-left:-40%;
 	text-align:center;
 	z-index: 1040;
 	h2{
@@ -370,6 +408,14 @@ body{
 //===============================================================================
 //===============================================================================
 @media (min-width: @screen-sm-min) {
+	#connect-popup{
+		width:520px;
+		top:30%;
+		left:50%;
+		margin-left:-260px;
+		text-align:center;
+	}
+
 	.main{
 		padding-top:150px;
 	}
