--- a/wp-content/themes/evie/assets/less/layouts/pages/_home.less
+++ b/wp-content/themes/evie/assets/less/layouts/pages/_home.less
@@ -49,7 +49,8 @@
 		.custom-banner-prev{
 			position:absolute;
 			left:4%;
-			top:53%;
+			top:50%;
+			margin-top:-28px;
 			width:53px;
 			height:53px;
 			background:url(../img/sprites/slider_arrow_left.png) no-repeat;
@@ -60,7 +61,8 @@
 		.custom-banner-next{
 			position:absolute;
 			right:4%;
-			top:53%;
+			top:50%;
+			margin-top:-28px;
 			width:53px;
 			height:53px;
 			background:url(../img/sprites/slider_arrow_right.png) no-repeat;
