--- a/wp-content/themes/evie/assets/css/main.css
+++ b/wp-content/themes/evie/assets/css/main.css
@@ -7559,27 +7559,24 @@ footer .copyright a {
   max-width: none;
   width: 100%;
 }
-.home-banner .main-banner-container .custom-banner-prev {
-  position: absolute;
-  left: 4%;
-  top: 53%;
-  width: 53px;
-  height: 53px;
-  background: url(../img/sprites/slider_arrow_left.png) no-repeat;
-  z-index: 999;
-  cursor: pointer;
-  display: none;
-}
+.home-banner .main-banner-container .custom-banner-prev,
 .home-banner .main-banner-container .custom-banner-next {
   position: absolute;
-  right: 4%;
-  top: 53%;
+  top: 50%;
   width: 53px;
   height: 53px;
-  background: url(../img/sprites/slider_arrow_right.png) no-repeat;
   z-index: 999;
   cursor: pointer;
   display: none;
+  margin-top: -27px;
+}
+.home-banner .main-banner-container .custom-banner-prev {
+  left: 4%;
+  background: url(../img/sprites/slider_arrow_left.png) no-repeat;
+}
+.home-banner .main-banner-container .custom-banner-next {
+  right: 4%;
+  background: url(../img/sprites/slider_arrow_right.png) no-repeat;
 }
 .home-banner .main-banner-container:hover .custom-banner-prev {
   display: block;
