--- a/wp-content/themes/evie/assets/less/navmenu.less
+++ b/wp-content/themes/evie/assets/less/navmenu.less
@@ -143,6 +143,19 @@
 			}
 		}
 	}
+	.searchBox-container{
+		border-top: 1px solid #c4bfbe;
+		display: block;
+		float: none;
+		margin: 0 -15px;
+		padding: 10px 15px;
+		.input-group{
+			input[type='search']{
+				width: 100% !important;
+				background:#fff;
+			}
+		}
+	}
 	.navbar-nav{
 		margin-top:0;
 		margin-bottom:0;
