--- a/wp-content/themes/evie/assets/less/main.less
+++ b/wp-content/themes/evie/assets/less/main.less
@@ -25,7 +25,9 @@
 @import "layouts/pages/_2col"; 		 // 2col template styling
 @import "layouts/pages/_stocklist";  // Stocklist template styling
 @import "layouts/pages/_testimonial";  // testimonial template styling
+@import "layouts/pages/_search_result";  // testimonial template styling
 @import "layouts/_posts";            // Post styling
+
 
 // Nav
 @import "navmenu";					 // Nav menu
