--- a/wp-content/themes/evie/assets/css/main.css
+++ b/wp-content/themes/evie/assets/css/main.css
@@ -7277,6 +7277,7 @@ body {
 }
 #main-content .under-title-link-container ul li .sub-menu li {
   float: none;
+  display: block;
 }
 #main-content .under-title-link-container ul li .sub-menu li a {
   display: inline-block;
