--- a/wp-content/themes/evie/assets/less/_global.less
+++ b/wp-content/themes/evie/assets/less/_global.less
@@ -90,6 +90,7 @@ body{
 		.border-top-right{
 			background:url(../img/sprites/bg_product_other.png) no-repeat right top;
 			height:15px;
+			float:right;
 		}
 	}
 	.headline-btm{
@@ -104,6 +105,7 @@ body{
 		.border-btm-right{
 			background:url(../img/sprites/bg_product_other.png) no-repeat right bottom;
 			height:15px;
+			float:right;
 		}
 	}	
 	
