--- a/wp-content/themes/evie/assets/less/_global.less
+++ b/wp-content/themes/evie/assets/less/_global.less
@@ -79,6 +79,7 @@ body{
 	}
 	
 	.headline-top{
+		background:url(../img/sprites/double_border_top_btm.png) repeat-x top;
 		.border-top-left{
 			background:url(../img/sprites/bg_product_other.png) no-repeat left top;
 			height:15px;
@@ -94,6 +95,7 @@ body{
 		}
 	}
 	.headline-btm{
+		background:url(../img/sprites/double_border_top_btm.png) repeat-x bottom;
 		.border-btm-left{
 			background:url(../img/sprites/bg_product_other.png) no-repeat left bottom;
 			height:15px;
