--- a/wp-content/themes/evie/assets/less/layouts/pages/_products.less
+++ b/wp-content/themes/evie/assets/less/layouts/pages/_products.less
@@ -49,6 +49,15 @@
 			padding-bottom:30px;
 			border-bottom:1px solid #000;
 			margin-bottom:30px;
+			
+			.product-double-top{
+				background:url(../img/sprites/double_border_top_btm.png) repeat-x top;
+			}
+			
+			.product-double-btm{
+				background:url(../img/sprites/double_border_top_btm.png) repeat-x bottom;
+			}
+			
 			.double-border-top-left{
 				background:url(../img/sprites/bg_product_other.png) no-repeat left top;
 				height:35px;
