--- a/wp-content/themes/evie/assets/less/navmenu.less
+++ b/wp-content/themes/evie/assets/less/navmenu.less
@@ -67,6 +67,7 @@
 		text-transform:uppercase;
 		font-size:12px;
 		width:210px !important;
+		min-height:21px;
 	}
 	.btn-default{
 		border-radius:0;
