--- a/wp-content/themes/evie/assets/less/layouts/pages/_promotion.less
+++ b/wp-content/themes/evie/assets/less/layouts/pages/_promotion.less
@@ -119,8 +119,8 @@
 		}
 		.col-same-height{
 			&.col-sm-6{
-				float:none;
-				display:table-cell;
+				//float:none;
+				//display:table-cell;
 				margin-bottom:0;
 				&:first-child{
 					border-right:1px solid #231F20;
