--- a/wp-content/themes/evie/assets/less/navmenu.less
+++ b/wp-content/themes/evie/assets/less/navmenu.less
@@ -295,6 +295,19 @@
 				}
 			}
 		}
+		.no-hover-about-evie{
+			.sub-menu{
+				left: 0px;
+			    width: 170px;
+			}
+		}
+		
+		.no-hover-buzz{
+			.sub-menu{
+				left: 0px;
+			    width: 170px;
+			}
+		}
 	}
 
 	.navbar-brand{
