--- a/wp-content/themes/evie/assets/less/navmenu.less
+++ b/wp-content/themes/evie/assets/less/navmenu.less
@@ -223,6 +223,7 @@
 		font-family: "Novecento";
 		font-weight: 300;
 		font-size: 10.5px;
+		color: #603913;
 	}
 }
 
@@ -261,7 +262,10 @@
 	.single-product .product .product-title h1,
 	.single-product .product .product-title p,
 	.woocommerce ul.products li.product h3,
-	.single-product .product .product-title h1
+	.single-product .product .product-title h1,
+	#connect-popup input[type=email], #connect-popup input[type=tel],#connect-popup input[type=submit],
+	.blog-section .headline-title-container .headline-title-center,
+	ul.products li.product .find-out-more
 	{
 		font-family: 'Heiti TC Medium','MHeiHK',"微軟正黑體","Microsoft JhengHei",'SimHei',sans-serif!important;
 	}
@@ -275,6 +279,9 @@
 	.promotion-section .more-special-title{
 		font-family: 'Heiti TC Medium','MHeiHK',"微軟正黑體","Microsoft JhengHei",'SimHei',sans-serif!important;
 		font-weight: bold;
+	}
+	&.contact-us-tc h2,&.contact-us-sc h2{
+		    font-family: "PlayfairDisplay"!important;
 	}
 }
 
